# UAVImageRestoration

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
src/: __init__.py
src/benchmark/: __init__.py  dashboard.py
src/edge/: __init__.py  edge_detection.py
src/enhancement/: __init__.py  contrast.py
src/frequency/: __init__.py  freq_filters.py
src/metrics/: __init__.py  quality.py
src/noise/: __init__.py  noise_generator.py
src/spatial/: __init__.py  spatial_filters.py
tests/: test_edge.py  test_enhancement.py  test_frequency.py  test_metrics.py  test_noise.py  test_spatial.py
