[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "uav-image-restoration"
version = "1.0.0"
description = "Degraded UAV imagery restoration and target enhancement pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mehmet Demir"}
]

keywords = ["image-processing", "UAV", "restoration", "denoising", "enhancement"]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "scikit-image>=0.21.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
